contrast and label errors fixed to fit WAVE

--- a/src/pages/CheckoutSuccessPage/checkoutsuccess.module.css
+++ b/src/pages/CheckoutSuccessPage/checkoutsuccess.module.css
@@ -11,7 +11,7 @@
 a {
   text-decoration: none;
   font-style: normal;
-  color: #2ec8c8;
+  color: #76e0e0;
 }
 
 a:hover {
